// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentForm > Snapshot Tests > should match snapshot after success 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="file"
    >
      SCORM Package (ZIP)
    </label>
    <div
      class="flex items-center gap-2"
    >
      <input
        accept=".zip"
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
        id="file"
        type="file"
      />
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Maximum file size: 
      100
       MB
    </p>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="thumbnail"
    >
      Thumbnail (Optional)
    </label>
    <input
      accept="image/jpeg,image/png,image/webp"
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="thumbnail"
      type="file"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="title"
    >
      Title 
      (Optional - uses manifest title if not provided)
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="title"
      name="title"
      placeholder="Override manifest title"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="description"
    >
      Description (Optional)
    </label>
    <textarea
      class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="description"
      name="description"
      placeholder="Enter description"
      rows="3"
    />
  </div>
  <div
    class="flex justify-end gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-upload mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="17 8 12 3 7 8"
        />
        <line
          x1="12"
          x2="12"
          y1="3"
          y2="15"
        />
      </svg>
      Upload 
      SCORM
    </button>
  </div>
</form>
`;

exports[`ContentForm > Snapshot Tests > should match snapshot during upload 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="file"
    >
      SCORM Package (ZIP)
    </label>
    <div
      class="flex items-center gap-2"
    >
      <input
        accept=".zip"
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
        id="file"
        type="file"
      />
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Maximum file size: 
      100
       MB
    </p>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="thumbnail"
    >
      Thumbnail (Optional)
    </label>
    <input
      accept="image/jpeg,image/png,image/webp"
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="thumbnail"
      type="file"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="title"
    >
      Title 
      (Optional - uses manifest title if not provided)
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="title"
      name="title"
      placeholder="Override manifest title"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="description"
    >
      Description (Optional)
    </label>
    <textarea
      class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="description"
      name="description"
      placeholder="Enter description"
      rows="3"
    />
  </div>
  <div
    class="flex justify-end gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-upload mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="17 8 12 3 7 8"
        />
        <line
          x1="12"
          x2="12"
          y1="3"
          y2="15"
        />
      </svg>
      Upload 
      SCORM
    </button>
  </div>
</form>
`;

exports[`ContentForm > Snapshot Tests > should match snapshot for SCORM form 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="file"
    >
      SCORM Package (ZIP)
    </label>
    <div
      class="flex items-center gap-2"
    >
      <input
        accept=".zip"
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
        id="file"
        type="file"
      />
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Maximum file size: 
      100
       MB
    </p>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="thumbnail"
    >
      Thumbnail (Optional)
    </label>
    <input
      accept="image/jpeg,image/png,image/webp"
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="thumbnail"
      type="file"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="title"
    >
      Title 
      (Optional - uses manifest title if not provided)
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="title"
      name="title"
      placeholder="Override manifest title"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="description"
    >
      Description (Optional)
    </label>
    <textarea
      class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="description"
      name="description"
      placeholder="Enter description"
      rows="3"
    />
  </div>
  <div
    class="flex justify-end gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-upload mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="17 8 12 3 7 8"
        />
        <line
          x1="12"
          x2="12"
          y1="3"
          y2="15"
        />
      </svg>
      Upload 
      SCORM
    </button>
  </div>
</form>
`;

exports[`ContentForm > Snapshot Tests > should match snapshot for media form 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="type"
    >
      Media Type
    </label>
    <button
      aria-autocomplete="none"
      aria-controls="radix-:r2b:"
      aria-expanded="false"
      class="flex h-10 w-full items-center justify-between rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Video
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <select
      aria-hidden="true"
      style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      tabindex="-1"
    >
      <option
        selected=""
        value="video"
      >
        Video
      </option>
      <option
        value="audio"
      >
        Audio
      </option>
      <option
        value="image"
      >
        Image
      </option>
      <option
        value="document"
      >
        Document
      </option>
    </select>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="file"
    >
      Media File
    </label>
    <div
      class="flex items-center gap-2"
    >
      <input
        accept="video/*,.mp4,.webm,.mov"
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
        id="file"
        type="file"
      />
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Maximum file size: 
      500
       MB
    </p>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="title"
    >
      Title 
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="title"
      name="title"
      placeholder="Enter title"
      required=""
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="description"
    >
      Description (Optional)
    </label>
    <textarea
      class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="description"
      name="description"
      placeholder="Enter description"
      rows="3"
    />
  </div>
  <div
    class="flex justify-end gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-upload mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="17 8 12 3 7 8"
        />
        <line
          x1="12"
          x2="12"
          y1="3"
          y2="15"
        />
      </svg>
      Upload 
      Media
    </button>
  </div>
</form>
`;

exports[`ContentForm > Snapshot Tests > should match snapshot with cancel button 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="file"
    >
      SCORM Package (ZIP)
    </label>
    <div
      class="flex items-center gap-2"
    >
      <input
        accept=".zip"
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 flex-1"
        id="file"
        type="file"
      />
    </div>
    <p
      class="text-xs text-muted-foreground"
    >
      Maximum file size: 
      100
       MB
    </p>
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="thumbnail"
    >
      Thumbnail (Optional)
    </label>
    <input
      accept="image/jpeg,image/png,image/webp"
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="thumbnail"
      type="file"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="title"
    >
      Title 
      (Optional - uses manifest title if not provided)
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="title"
      name="title"
      placeholder="Override manifest title"
    />
  </div>
  <div
    class="space-y-2"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="description"
    >
      Description (Optional)
    </label>
    <textarea
      class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="description"
      name="description"
      placeholder="Enter description"
      rows="3"
    />
  </div>
  <div
    class="flex justify-end gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      type="button"
    >
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-upload mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
        />
        <polyline
          points="17 8 12 3 7 8"
        />
        <line
          x1="12"
          x2="12"
          y1="3"
          y2="15"
        />
      </svg>
      Upload 
      SCORM
    </button>
  </div>
</form>
`;
